again fixed z-indexes for <Modal /> and <ModalConfirm />

--- a/src/ui/utils/Modal/ui/Modal.module.scss
+++ b/src/ui/utils/Modal/ui/Modal.module.scss
@@ -30,7 +30,7 @@
 .opened {
     pointer-events: auto;
     opacity: 1;
-    z-index: var(--uikit-utils-z-index);
+    z-index: var(--uikit-utils-modal-z-index);
 
     .content {
         @include anims.utilOpened;
